Fix : quantities problem when ordering.